--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hapi/hapi": "^19.1.1",
     "@hapi/inert": "^6.0.1",
     "@hapi/joi": "^17.1.1",
+    "@vue/composition-api": "^1.4.1",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "blipp": "^4.0.1",
@@ -21,6 +22,7 @@
     "objection": "^2.1.3",
     "pg": "^8.0.3",
     "vue": "^2.6.14",
+    "vue-insta-stories": "^0.9.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.22",
     "vuex": "^3.2.0"
@@ -36,6 +38,7 @@
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-stories-instagram": "^0.2.1",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.4.3"
   },
