--- a/api/package.json
+++ b/api/package.json
@@ -1,22 +1,68 @@
 {
-  "name": "monkey",
-  "version": "0.1",
-  "license": "MIT",
+  "name": "ui-spa",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "watch": "nodemon hapi-server.js"
+    "ui-watch": "vue-cli-service serve",
+    "api-watch": "nodemon --ignore ./node_modules hapi-server.js",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@hapi/boom": "^9.1.4",
-    "@hapi/hapi": "^20.2.1",
-    "blipp": "^4.0.2",
-    "hapi-pino": "^9.0.0",
-    "joi": "^17.4.2",
-    "knex": "^0.95.14",
-    "objection": "^3.0.0",
-    "pg": "^8.7.1",
-    "pino-pretty": "^7.2.0"
+    "@hapi/hapi": "^19.1.1",
+    "@hapi/inert": "^6.0.1",
+    "@hapi/joi": "^17.1.1",
+    "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
+    "blipp": "^4.0.1",
+    "core-js": "^3.6.5",
+    "hapi-pino": "^8.0.0",
+    "knex": "^0.21.1",
+    "objection": "^2.1.3",
+    "pg": "^8.0.3",
+    "vue": "^2.6.14",
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.22",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^2.0.3",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true,
+      "browser": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {
+      "no-console": "off"
+    },
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
