--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "nodemon": "^2.0.3",
+    "prettier": "^2.5.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
